<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clock">

    <Button
        android:id="@+id/Logout_But"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/StopWatch_But"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Clock_But"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clock"
        app:layout_constraintBottom_toBottomOf="@+id/Timer_But"
        app:layout_constraintEnd_toEndOf="@+id/StopWatch_But"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Timer_But"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Alarm_But"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/alarm"
        app:layout_constraintBottom_toBottomOf="@+id/Clock_But"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Clock_But"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Timer_But"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="@+id/StopWatch_But"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="@+id/Alarm_But"
        app:layout_constraintTop_toTopOf="@+id/StopWatch_But"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sec"
        android:layout_width="69dp"
        android:layout_height="66dp"
        android:layout_marginTop="2dp"
        android:text="ss"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="@+id/am"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/am"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/hour"
        android:layout_width="69dp"
        android:layout_height="66dp"
        android:text="hh"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/min"
        android:layout_width="69dp"
        android:layout_height="66dp"
        android:text="mm"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/am"
        android:layout_width="79dp"
        android:layout_height="66dp"
        android:text="am"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="28dp"
        android:layout_height="66dp"
        android:text=":"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="@+id/min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/min"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="28dp"
        android:layout_height="66dp"
        android:text=":"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="@+id/sec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sec"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
